flir_subscriber_original/log/build_2023-05-23_00-06-09/wifi_listener/stderr.log
  File "/home/samuel/flir_subscriber/install/wifi_listener/lib/python3.8/site-packages/wifi_listener/wifi_listener.py", line 1
    from rclpy
             ^
SyntaxError: invalid syntax

